// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge weight: regular tone: error renders correctly 1`] = `
<div>
  <div
    class="css-16xnn81-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="css-1h89p7b-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: info renders correctly 1`] = `
<div>
  <div
    class="css-11uollg-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="css-1curl5b-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="11"
      />
      <path
        d="M12 7H12.01"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-mazyxq-boxStyles-StatusBadge"
  >
    <div
      class="css-1ttchuf-boxStyles-NeutralDot"
    />
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1j8vzzn-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="css-1esj8rc-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10.5"
      />
      <path
        d="M7 13L10 16L17 9"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1mxhjjp-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="css-qz15ef-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1ab91q-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="css-1h89p7b-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: info renders correctly 1`] = `
<div>
  <div
    class="css-1ab91q-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="css-1curl5b-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="11"
      />
      <path
        d="M12 7H12.01"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-1ab91q-boxStyles-StatusBadge"
  >
    <div
      class="css-1ttchuf-boxStyles-NeutralDot"
    />
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1ab91q-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="css-1esj8rc-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10.5"
      />
      <path
        d="M7 13L10 16L17 9"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1ab91q-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="css-qz15ef-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
      />
    </svg>
    <span
      class="css-10dvol5-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;
